fix: remove horizontal scrollbar

--- a/nonograms/src/style.css
+++ b/nonograms/src/style.css
@@ -16,7 +16,7 @@ html {
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  min-width: 500px;
+  /* min-width: 500px; */
 }
 
 body {
@@ -319,4 +319,14 @@ select:hover{
 .sound:hover,
 .theme:hover {
   background-color: unset;
+}
+
+@media  (min-width:400px)and (max-width: 827px) {
+  .main_container {
+    width: calc(100vw - 27px);
+    height: calc(100vw - 27px);
+  }
+  .menu button {
+    width: 60px;
+  }
 }
